--- a/static/css/core.css
+++ b/static/css/core.css
@@ -10,6 +10,7 @@ body{
     background: linear-gradient(to right, #ff9472, #f2709c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: white;
     /* font-family: 'Roboto', sans-serif; */
+    overflow-x: hidden;
 }
 
 a{
